Eevee transforms geometry when using "High Quality Normals" #89360

Closed
opened 2021-06-22 14:19:25 +02:00 by Steffen Dünner · 8 comments

System Information
Operating system: Linux-5.8.0-55-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.19.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-21 21:38, hash: 6f158f834d
Worked: 2.93 Final

Caused by 44d2479dc3

Short description of error
When using Eevee to render a viewport preview of an object containing a material with an (empty) normal map, the geometry gets transformed to its UV layout.
This only happens when the material contains a Normal Map node and "High Quality Normals" are enabled.

Exact steps for others to reproduce the error

  • Open the attached blend file:
    Eevee_Bug_v01.blend
  • Switch viewport to "Rendered" or "Material Preview" (both using Eeevee)
  • The cube is transformed to its UV layout
  • Toggle the "High Quality Normals" option under "Performance"
  • See the cube switch from its UV representation to its actual shape
  • Toggle the "High Quality Normals" again
  • The cube changes its shape to a UV cross
**System Information** Operating system: Linux-5.8.0-55-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.19.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-21 21:38, hash: `6f158f834d` Worked: 2.93 Final Caused by 44d2479dc3 **Short description of error** When using Eevee to render a viewport preview of an object containing a material with an (empty) normal map, the geometry gets transformed to its UV layout. This only happens when the material contains a Normal Map node and "High Quality Normals" are enabled. **Exact steps for others to reproduce the error** - Open the attached blend file: [Eevee_Bug_v01.blend](https://archive.blender.org/developer/F10187832/Eevee_Bug_v01.blend) - Switch viewport to "Rendered" or "Material Preview" (both using Eeevee) - The cube is transformed to its UV layout - Toggle the "High Quality Normals" option under "Performance" - See the cube switch from its UV representation to its actual shape - Toggle the "High Quality Normals" again - The cube changes its shape to a UV cross

Added subscriber: @SteffenD

Added subscriber: @SteffenD

#89372 was marked as duplicate of this issue

#89372 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Caused by 44d2479dc3, also get this:

BLI_assert failed: source/blender/draw/intern/draw_cache_impl_mesh.c:1251, drw_mesh_batch_cache_check_available(), at '!DRW_vbo_requested(((GPUVertBuf **)&cache->final.vbo)[i])'

CC @Jeroen-Bakker

Caused by 44d2479dc3, also get this: ``` BLI_assert failed: source/blender/draw/intern/draw_cache_impl_mesh.c:1251, drw_mesh_batch_cache_check_available(), at '!DRW_vbo_requested(((GPUVertBuf **)&cache->final.vbo)[i])' ``` CC @Jeroen-Bakker

This issue was referenced by f4e3b1e573

This issue was referenced by f4e3b1e5732ca8413a47dfdb93ae1227bb14f9dc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-06-22 15:14:40 +02:00

Added subscribers: @Vyach, @chemicalcrux

Added subscribers: @Vyach, @chemicalcrux
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89360
No description provided.