Fix T89360: Eevee transforms geometry when using "High Quality Normals"

Offset missed in rB44d2479dc36f